[package]
name = "user-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "postgres", "macros"] }
uuid = { version = "1.3", features = ["v4","serde"] }
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.0"